# bip39c

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.md  configure.ac
src/: Makefile.am  bip39c.c  bip39c.h
src/.deps/: bip39c-bip39c.Po  bip39c-main.Po
